deploy/app/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ticket
  annotations:
    argocd.argoproj.io/sync-wave: '-3'
  labels:
    project: ticket-platform
    pod-security.kubernetes.io/enforce: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: ticket-data
  annotations:
    argocd.argoproj.io/sync-wave: '-3'
  labels:
    project: ticket-platform
    pod-security.kubernetes.io/enforce: baseline
